<resources>
    <string name="app_name">Sensors-Data-Logger</string>
    <string name="alert_title">Alert</string>
    <string name="start_title">Record</string>
    <string name="ready_title">Ready</string>
    <string name="authenticate_title">Authenticate</string>
    <string name="user_hint">Enter Username</string>
    <string name="detach_title">Detach</string>
    <string name="stop_title">Stop</string>
    <string name="write_file">File</string>
    <string name="permission_explanation">Lets the application lock the screen for testing purposes.</string>
    <string name="authentication">Rejected</string>
</resources>
